--- a/public/assets/m/css/openpositions.css
+++ b/public/assets/m/css/openpositions.css
@@ -17,6 +17,17 @@
    padding-left: 0px;
 }
 
+/*** added for open Position styling ****/
+
+
+.searchWrapper{
+  margin-bottom: 12px;
+  border: 1px solid #ccc;
+  padding: 5px;
+  border-radius: 10px;
+}
+/*** added for open Position styling ****/
+
 .dropdown-menu{
    background-color: white;
 }
@@ -25,10 +36,15 @@
     height: 55px;
     margin-top: 15px;
 }
+
+.visitlinks h4 {
+    color: #141D60;
+}
 .visitlinks a{
-    color: black;
+    color: #800080;
     font-weight: bold;
 }
+
 .fonticon1{
   font-size:20px;
   color: black;
@@ -182,14 +198,14 @@ h2 {
 .visit-title {
     color: #888888;
 }
-span {
+/*span {
     font-family: robotoBold;
     color: #777777;
     font-size: 1.35em;
-}
+}*/
 
 .visit-details {
-    color: #777777;
+   color: #42484A;
 }
 .separator {
     color: #a1a1a1;
