Modified feedback template edit

--- a/public/assets/m/css/openpositions.css
+++ b/public/assets/m/css/openpositions.css
@@ -170,7 +170,7 @@ color : black;
 .my-visit-content {
     padding-top: 15px;
     padding-bottom: 15px;
-    position: absolute; 
+    /*position: absolute; */
     background-color: #eeeeee;
 }
 .visit-card {
