--- a/public/assets/m/css/style.css
+++ b/public/assets/m/css/style.css
@@ -26,6 +26,15 @@ div#profile-details {
     text-shadow: 4px 6px 4px #ccc;
 }
 
+.hd-sticky a.changeTheme{
+    top: 18px;
+    position: absolute;
+    right: 21px;
+    color: rgb(255, 255, 255);
+    text-shadow: 4px 6px 4px rgb(204, 204, 204);
+    font-size: 13px;
+    z-index: 9999px;
+} 
 
 div#profile-details .profile-pic,
 div#profile-details .profile-name,
