--- a/views/layouts/mmain-mobile.ejs
+++ b/views/layouts/mmain-mobile.ejs
@@ -185,13 +185,27 @@
 
 <body>
 	<div id="page">
+    <%if(locals.user.theme.includes('.jpg')){%>
+        <style type="text/css">
+          body, #sb-wrapper,.sidebar-item{
+            background: url(<%=locals.user.theme %>);
+          }
+          
+        </style>
+      <% }else{%>
+        <style type="text/css">
+          body, #sb-wrapper,.sidebar-item{
+            background: <%=locals.user.theme %>;
+          }          
+        </style>
+      <% } %> 
 
 		<!-- Sidebar -->
 		<div id="sb-wrapper"><h1>Mobile Portal</h1>
 		    <div class="sb-profile">
 				<%if (locals.user !== undefined) { %>
-				<div class="menu-profile-pic"><img src="<%=locals.user.avatar%>"></div>
-				<div class="menu-profile-name"><%=locals.user.name.first%> <%=locals.user.name.last%></div>
+				    <div class="menu-profile-pic"><img src="<%=locals.user.avatar%>"></div>
+				    <div class="menu-profile-name"><%=locals.user.name.first%> <%=locals.user.name.last%></div>
 				<% } %>
 			</div> <!-- sb-profile end -->
 			<%-locals.menu %>
